fix(button): ensure size and vertical alignment of icon with text buttons
OUI-1454

--- a/projects/oblique/src/styles/scss/themes/material/mat-button.scss
+++ b/projects/oblique/src/styles/scss/themes/material/mat-button.scss
@@ -59,8 +59,9 @@
 		}
 	}
 
-	.mat-icon {
-		margin-top: -2px;
+	.mat-icon[data-mat-icon-type="svg"] {
+		font-size: 1.5em;
+		line-height: 1;
 	}
 
 	 &.ob-button.mat-button-disabled {
